Obsidian releases code review suggestions

--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
 	"author": "Luis Sobrecueva",
 	"authorUrl": "https://github.com/lusob",
 	"fundingUrl": "https://bmc.link/lusob",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
